--- a/.htaccess
+++ b/.htaccess
@@ -96,9 +96,9 @@
 <IfModule mod_rewrite.c>
     RewriteEngine On
     
-    # Força HTTPS (descomente se necessário)
-    # RewriteCond %{HTTPS} off
-    # RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+    # Força HTTPS
+    RewriteCond %{HTTPS} off
+    RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
     
     # Remove www (descomente se preferir sem www)
     # RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
