--- a/.htaccess
+++ b/.htaccess
@@ -86,8 +86,8 @@
     # Referrer Policy
     Header always set Referrer-Policy "strict-origin-when-cross-origin"
     
-    # Content Security Policy básico
-    Header always set Content-Security-Policy "default-src 'self' https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://unpkg.com https://cdnjs.cloudflare.com https://fonts.googleapis.com https://cdn.tailwindcss.com; style-src 'self' 'unsafe-inline' https://unpkg.com https://cdnjs.cloudflare.com https://fonts.googleapis.com; font-src 'self' data: https://fonts.gstatic.com https://cdnjs.cloudflare.com https://use.typekit.net; img-src 'self' data: https:; connect-src 'self' https:;"
+    # Content Security Policy - Simplificado
+    Header always set Content-Security-Policy "default-src 'self' https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https:; style-src 'self' 'unsafe-inline' https:; font-src 'self' data: https:; img-src 'self' data: https:; connect-src 'self' https:;"
 </IfModule>
 
 # ========================================
@@ -104,6 +104,11 @@
     # RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
     # RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
     
+    # Ignora diretórios e arquivos reais (DEVE VIR PRIMEIRO)
+    RewriteCond %{REQUEST_FILENAME} -d [OR]
+    RewriteCond %{REQUEST_FILENAME} -f
+    RewriteRule ^ - [L]
+    
     # Clean URLs para páginas específicas
     RewriteRule ^rhdocs/?$ pages/rhdocs.php [L]
     RewriteRule ^medplaces/?$ pages/medplaces.php [L]
@@ -116,14 +121,13 @@
     # Redireciona .html para .php
     RewriteRule ^(.*)\.html$ $1.php [R=301,L]
     
-    # Adiciona extensão .php automaticamente
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^([^.]+)$ $1.php [NC,L]
-    
     # Remove extensão .php da URL
     RewriteCond %{THE_REQUEST} /([^.]+)\.php [NC]
     RewriteRule ^ /%1 [NC,L,R=301]
+    
+    # Adiciona extensão .php automaticamente (apenas se arquivo .php existir)
+    RewriteCond %{REQUEST_FILENAME}.php -f
+    RewriteRule ^([^.]+)$ $1.php [NC,L]
 </IfModule>
 
 # ========================================
